@@ -1,4 +1,5 @@
 Adium 1.4 b3
+ * Changed behavior for account options: a lot were only changing when reconnecting, now all that are able to (i.e., non-connect options) take affect immediately.
  * Moved the Status Menu Item and Dock preferences to a new "Message Alerts" advanced preference.
  * Clarified the option to only count the number of highlights/mentions in the dock/status menu item in its wording. (#12080)
  * Status icon packs can now specify "Idle And Away" icons to use for contacts. (#872)
